// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconView Snapshots tests should match snapshot 1`] = `
<body>
  <div>
    <div
      class="componentWrapper wrapperSize_64"
    >
      <div
        class="component"
        style="width: 64px; height: 64px;"
      >
        <svg
          focusable="false"
          height="64"
          viewBox="0 0 64 64"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="bg"
            d="M1 16.4A18 18 0 0 1 16.4 1a110 110 0 0 1 31.2 0A18 18 0 0 1 63 16.4a110 110 0 0 1 0 31.2A18 18 0 0 1 47.6 63a110 110 0 0 1-31.2 0A18 18 0 0 1 1 47.6a110 110 0 0 1 0-31.2"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`IconView Snapshots tests should match snapshot with addons 1`] = `
<body>
  <div>
    <div
      class="componentWrapper wrapperSize_64"
    >
      <div
        class="component"
        style="width: 64px; height: 64px;"
      >
        <svg
          focusable="false"
          height="64"
          viewBox="0 0 64 64"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="bg"
            d="M63.7 23.7c-.1-2.2-2.4-3.7-4.7-3.7A15 15 0 0 1 44 5C44 2.7 42.5.4 40.3.3a121 121 0 0 0-23.9.7A18 18 0 0 0 1 16.4a110 110 0 0 0 0 31.2A18 18 0 0 0 16.4 63a110 110 0 0 0 31.2 0A18 18 0 0 0 63 47.6a110 110 0 0 0 .7-23.9"
          />
        </svg>
      </div>
      <div
        class="addons topAddons"
      >
        Top addon
      </div>
    </div>
  </div>
</body>
`;

exports[`IconView Snapshots tests should match snapshot with addons 2`] = `
<body>
  <div>
    <div
      class="componentWrapper wrapperSize_64"
    >
      <div
        class="component"
        style="width: 64px; height: 64px;"
      >
        <svg
          focusable="false"
          height="64"
          viewBox="0 0 64 64"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="bg"
            d="M63.7 23.7c-.1-2.2-2.4-3.7-4.7-3.7A15 15 0 0 1 44 5C44 2.7 42.5.4 40.3.3a121 121 0 0 0-23.9.7A18 18 0 0 0 1 16.4a110 110 0 0 0 0 31.2A18 18 0 0 0 16.4 63a110 110 0 0 0 31.2 0A18 18 0 0 0 63 47.6a110 110 0 0 0 .7-23.9"
          />
        </svg>
      </div>
      <div
        class="addons topAddons"
      >
        Top addon
      </div>
    </div>
  </div>
  <div>
    <div
      class="componentWrapper wrapperSize_64"
    >
      <div
        class="component"
        style="width: 64px; height: 64px;"
      >
        <svg
          focusable="false"
          height="64"
          viewBox="0 0 64 64"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="bg"
            d="M16.4 1A18 18 0 0 0 1 16.4a110 110 0 0 0 0 31.2A18 18 0 0 0 16.4 63a110 110 0 0 0 23.9.7c2.2-.1 3.7-2.4 3.7-4.7a15 15 0 0 1 15-15c2.3 0 4.6-1.5 4.7-3.7a121 121 0 0 0-.7-23.9A18 18 0 0 0 47.6 1a110 110 0 0 0-31.2 0"
          />
        </svg>
      </div>
      <div
        class="addons bottomAddons"
      >
        Bottom addon
      </div>
    </div>
  </div>
</body>
`;

exports[`IconView Snapshots tests should match snapshot with addons 3`] = `
<body>
  <div>
    <div
      class="componentWrapper wrapperSize_64"
    >
      <div
        class="component"
        style="width: 64px; height: 64px;"
      >
        <svg
          focusable="false"
          height="64"
          viewBox="0 0 64 64"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="bg"
            d="M63.7 23.7c-.1-2.2-2.4-3.7-4.7-3.7A15 15 0 0 1 44 5C44 2.7 42.5.4 40.3.3a121 121 0 0 0-23.9.7A18 18 0 0 0 1 16.4a110 110 0 0 0 0 31.2A18 18 0 0 0 16.4 63a110 110 0 0 0 31.2 0A18 18 0 0 0 63 47.6a110 110 0 0 0 .7-23.9"
          />
        </svg>
      </div>
      <div
        class="addons topAddons"
      >
        Top addon
      </div>
    </div>
  </div>
  <div>
    <div
      class="componentWrapper wrapperSize_64"
    >
      <div
        class="component"
        style="width: 64px; height: 64px;"
      >
        <svg
          focusable="false"
          height="64"
          viewBox="0 0 64 64"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="bg"
            d="M16.4 1A18 18 0 0 0 1 16.4a110 110 0 0 0 0 31.2A18 18 0 0 0 16.4 63a110 110 0 0 0 23.9.7c2.2-.1 3.7-2.4 3.7-4.7a15 15 0 0 1 15-15c2.3 0 4.6-1.5 4.7-3.7a121 121 0 0 0-.7-23.9A18 18 0 0 0 47.6 1a110 110 0 0 0-31.2 0"
          />
        </svg>
      </div>
      <div
        class="addons bottomAddons"
      >
        Bottom addon
      </div>
    </div>
  </div>
  <div>
    <div
      class="componentWrapper wrapperSize_64"
    >
      <div
        class="component"
        style="width: 64px; height: 64px;"
      >
        <svg
          focusable="false"
          height="64"
          viewBox="0 0 64 64"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="bg"
            d="M32 0q4.5 0 8.3.3C42.5.4 44 2.7 44 5a15 15 0 0 0 15 15c2.3 0 4.6 1.5 4.7 3.7a121 121 0 0 1 0 16.6c-.1 2.2-2.4 3.7-4.7 3.7a15 15 0 0 0-15 15c0 2.3-1.5 4.6-3.7 4.7a121 121 0 0 1-23.9-.7A18 18 0 0 1 1 47.6a110 110 0 0 1 0-31.2A18 18 0 0 1 16.4 1Q22.7 0 32 0"
          />
        </svg>
      </div>
      <div
        class="addons topAddons"
      >
        Top addon
      </div>
      <div
        class="addons bottomAddons"
      >
        Bottom addon
      </div>
    </div>
  </div>
</body>
`;

exports[`IconView Snapshots tests should match snapshot with border 1`] = `
<body>
  <div>
    <div
      class="componentWrapper wrapperSize_64"
    >
      <div
        class="component"
        style="width: 64px; height: 64px;"
      >
        <svg
          focusable="false"
          height="64"
          viewBox="0 0 64 64"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="bg"
            d="M1 16.4A18 18 0 0 1 16.4 1a110 110 0 0 1 31.2 0A18 18 0 0 1 63 16.4a110 110 0 0 1 0 31.2A18 18 0 0 1 47.6 63a110 110 0 0 1-31.2 0A18 18 0 0 1 1 47.6a110 110 0 0 1 0-31.2"
          />
          <path
            class="border"
            d="M1.5 16.5c1.2-8 7-13.8 15-15a110 110 0 0 1 31 0c8 1.2 13.8 7 15 15a110 110 0 0 1 0 31c-1.2 8-7 13.8-15 15a110 110 0 0 1-31 0c-8-1.2-13.8-7-15-15a110 110 0 0 1 0-31"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`IconView Snapshots tests should match snapshot with image 1`] = `
<body>
  <div>
    <div
      class="componentWrapper wrapperSize_64"
    >
      <div
        class="component"
        style="width: 64px; height: 64px;"
      >
        <svg
          focusable="false"
          height="64"
          viewBox="0 0 64 64"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="bg"
            d="M1 16.4A18 18 0 0 1 16.4 1a110 110 0 0 1 31.2 0A18 18 0 0 1 63 16.4a110 110 0 0 1 0 31.2A18 18 0 0 1 47.6 63a110 110 0 0 1-31.2 0A18 18 0 0 1 1 47.6a110 110 0 0 1 0-31.2"
          />
          <defs>
            <clippath
              id=":r4:"
            >
              <path
                d="M1 16.4A18 18 0 0 1 16.4 1a110 110 0 0 1 31.2 0A18 18 0 0 1 63 16.4a110 110 0 0 1 0 31.2A18 18 0 0 1 47.6 63a110 110 0 0 1-31.2 0A18 18 0 0 1 1 47.6a110 110 0 0 1 0-31.2"
              />
            </clippath>
          </defs>
          <image
            clip-path="url(#:r4:)"
            height="100%"
            href="https://picsum.photos/id/1081/5512/3708"
            preserveAspectRatio="xMidYMid slice"
            width="100%"
          />
          <path
            d="M1 16.4A18 18 0 0 1 16.4 1a110 110 0 0 1 31.2 0A18 18 0 0 1 63 16.4a110 110 0 0 1 0 31.2A18 18 0 0 1 47.6 63a110 110 0 0 1-31.2 0A18 18 0 0 1 1 47.6a110 110 0 0 1 0-31.2"
            fill="none"
          />
        </svg>
      </div>
    </div>
  </div>
</body>
`;

exports[`IconView Snapshots tests should match snapshot with text 1`] = `
<body>
  <div>
    <div
      class="componentWrapper wrapperSize_64"
    >
      <div
        class="component"
        style="width: 64px; height: 64px;"
      >
        <svg
          focusable="false"
          height="64"
          viewBox="0 0 64 64"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="bg"
            d="M1 16.4A18 18 0 0 1 16.4 1a110 110 0 0 1 31.2 0A18 18 0 0 1 63 16.4a110 110 0 0 1 0 31.2A18 18 0 0 1 47.6 63a110 110 0 0 1-31.2 0A18 18 0 0 1 1 47.6a110 110 0 0 1 0-31.2"
          />
        </svg>
        <div
          class="text"
        >
          <span>
            text
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;
